# Web_module_8_HW

./: pyproject.toml  read.py
sending_emails/: consumer.py  producer.py
